bold section name

--- a/edc_export/templates/edc_export/bootstrap3/home.html
+++ b/edc_export/templates/edc_export/bootstrap3/home.html
@@ -94,7 +94,7 @@
 			<input type="hidden" name="app_config_name" value="{{ app_config.name }}" form="frm_exportables">
 
 	 		<div class="panel panel-default">
-	 		<div class="panel-heading clearfix">{{ app_config.verbose_name }}&nbsp;<small>({{ app_config.name }})</small>
+	 		<div class="panel-heading clearfix"><b>{{ app_config.verbose_name }}</b>&nbsp;<small>({{ app_config.name }})</small>
 	 		</div>
 			<div class="panel-body">
 				<div class="form-group">		
